# biomedical-imaging-and-analysis

./: CMakeLists.txt  README.md
TeamWater/Binary/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  TeamWater.sln  TeamWater.vcxproj  TeamWater.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
TeamWater/TeamWater/: AffineRegistration.cxx  BSplineRegistration.cxx  BSplineRegistration2.cxx  CMakeLists.txt  DicomSeriesReadImageWrite2.cxx  ITKExamples.h  ImageReadImageSeriesWrite.cxx  NeighborhoodConnectedImageFilter.cxx  TeamWater.cpp  WatershedSegmentation1.cxx
